feat: add animation of animal cards

--- a/online-zoo/pages/main/main.html
+++ b/online-zoo/pages/main/main.html
@@ -55,7 +55,7 @@
                 <div class="about__content">
                     <div class="about__inner">
                         <div class="about__text">Watch your <span>favorite</span> animal online</div>
-                        <button class="about__button button-main">wath online</button>
+                        <button class="about__button button-main">watch online</button>
                     </div>
                 </div>
             </div>
