feat: add animation of price points

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header__donate header">
         <div class="header__container container">
             <div class="header__logo">
                 <a href="../main/main.html"><h1>PetStory online</h1></a>
@@ -80,29 +80,46 @@
                     </div>
                     <p>Amount</p>
                     <div class="progress-bar__place">
-                        <div class="progress-bar">
-                            <div class="progress-bar__line">
-                                <div class="progress-bar__ellipse-row">
-                                    <div class="progress-bar__ellipse"></div>
-                                    <div class="progress-bar__ellipse"></div>
-                                    <div class="progress-bar__ellipse"></div>
-                                    <div class="progress-bar__ellipse"></div>
-                                    <div class="progress-bar__ellipse"></div>
-                                    <div class="progress-bar__ellipse"></div>
-                                    <div class="progress-bar__ellipse"></div>
-                                    <div class="progress-bar__ellipse"></div>
+                        <div class="progress-bar__wrap">
+                            <div class="progress-bar">
+                                <div class="progress-bar__line">
                                 </div>
                             </div>
-                        </div>
-                        <div class="progress-bar__prices">
-                            <div class="progress-bar__price">$5000</div>
-                            <div class="progress-bar__price">$2000</div>
-                            <div class="progress-bar__price">$1000</div>
-                            <div class="progress-bar__price">$500</div>
-                            <div class="progress-bar__price">$250</div>
-                            <div class="progress-bar__price">$100</div>
-                            <div class="progress-bar__price">$50</div>
-                            <div class="progress-bar__price">$25</div>
+                            <div class="progress-bar__ellipse-row">
+                                <div class="progress-bar__point">
+                                    <div class="progress-bar__ellipse"></div>
+                                    <div class="progress-bar__price">$5000</div>
+                                </div>
+                                <div class="progress-bar__point">
+                                    <div class="progress-bar__ellipse"></div>
+                                    <div class="progress-bar__price">$2000</div>
+                                </div>
+                                <div class="progress-bar__point">
+                                    <div class="progress-bar__ellipse"></div>
+                                    <div class="progress-bar__price">$1000</div>
+                                </div>
+                                <div class="progress-bar__point">
+                                    <div class="progress-bar__ellipse"></div>
+                                    <div class="progress-bar__price">$500</div>
+                                </div>
+                                <div class="progress-bar__point">
+                                    <div class="progress-bar__ellipse"></div>
+                                    <div class="progress-bar__price">$250</div>
+                                </div>
+                                <div class="progress-bar__point">
+                                    <div class="progress-bar__ellipse"></div>
+                                    <div class="progress-bar__price">$100</div>
+                                </div>
+                                <div class="progress-bar__point">
+                                    <div class="progress-bar__ellipse"></div>
+                                    <div class="progress-bar__price">$50</div>
+                                </div>
+                                <div class="progress-bar__point">
+                                    <div class="progress-bar__ellipse"></div>
+                                    <div class="progress-bar__price">$25</div>
+                                </div>
+                            </div>
+                            
                         </div>
                     </div>
                     <form class="feed-friend__input-amount">
