feat: add icon and link

--- a/online-zoo/pages/main/main.html
+++ b/online-zoo/pages/main/main.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-main.css">
-    <title>Document</title>
+    <link type="Image/x-icon" href="../../assets/icons/bamboo-favicon.svg" rel="icon">
+    <title>PetStory online</title>
 </head>
 <body>
     <header class="header">
@@ -389,7 +390,7 @@
                 <nav class="footer__nav">
                     <ul class="footer__menu menu">
                         <li class="menu__item">
-                            <a class="menu__link menu__link_active" href="">
+                            <a class="menu__link menu__link_active" href="main.html">
                                 About
                             </a>
                         </li>
