fix: background donate

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -52,9 +52,10 @@
     </header>
     <main>
         <section class="animal">
-            
+            <img class="animal__bg" src="../../assets/images/panda_bg.jpg">
         </section>
         <section class="feed-friend">
+            
             <div class="feed-friend__container container">
 
                 <h3 class="feed-friend__title1">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h3>
