feat: add adaptive for donation page / 1000px

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -52,7 +52,9 @@
     </header>
     <main>
         <section class="animal">
-            <img class="animal__bg" src="../../assets/images/panda_bg.jpg">
+            <div class="animal__img-wrap">
+                <img class="animal__bg" src="../../assets/images/panda_bg.jpg">
+            </div>
         </section>
         <section class="feed-friend">
             
@@ -222,7 +224,7 @@
                     </ul>
                 </nav>
                 <div class="footer__designed">
-                    <p>Designed by Alisa Samborskaya</p>
+                    <p class="footer__designed-text-1">Designed by Alisa Samborskaya</p>
                     <p>©RSSchool & ©Yem Digital 2021</p>
                 </div>
             </div>
