fix: pixel perfect

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -93,6 +93,7 @@
             <picture>
                 <source media="(max-width: 320px)" srcset="../../assets/images/320px/panda_bg-320px.jpg">
                 <source media="(max-width: 640px)" srcset="../../assets/images/640px/panda_bg-640px.jpg">
+                <source media="(max-width: 1000px)" srcset="../../assets/images/1000px/panda_bg-1000px.jpg">
                 <source media="(min-width: 641px)" srcset="../../assets/images/panda_bg.jpg">
                 <img class="animal__bg" src="../../assets/images/panda_bg.jpg" alt="Panda">
             </picture>
