fix: radio button design

--- a/online-zoo/pages/donate/donate.html
+++ b/online-zoo/pages/donate/donate.html
@@ -185,7 +185,7 @@
                             <input id="monthly" type="radio" name="feed" value="monthly">
                             <label for="monthly">Monthly</label>
                             <input id="once" type="radio" name="feed" value="once" checked>
-                            <label for="monthly">Once</label> 
+                            <label for="once">Once</label> 
 
                         </p>
                         
