--- a/online-zoo/pages/main/main.html
+++ b/online-zoo/pages/main/main.html
@@ -88,7 +88,7 @@
         </div>
     </header>
     <main>
-        <section class="about">
+        <section id = "g" class="about">
             <div class="about__container container">
                 <div class="about__content">
                     <div class="about__inner">
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </section>
-        <section class="backstage">
+        <section id = "g" class="backstage">
             <div class="backstage__background"></div>
             <div class="container backstage__container">
                 <div class="backstage__content">
@@ -119,7 +119,7 @@
             </div>
 
         </section>
-        <section class="pets">
+        <section id = "g" class="pets">
             <div class="pets__background"></div>
             <div class="pets__container container">
                 <div class="slider">
@@ -213,7 +213,7 @@
                 <button class="pets__button button-main">choose your favorite</button>
             </div>
         </section>
-        <section class="pick-friend">
+        <section id = "g" class="pick-friend">
             <div class="pick-friend__container container">
                 <p class="pick-friend__title">Pick and feed a friend</p>
                 <div class="pick-friend__text">
@@ -268,7 +268,7 @@
                 <button class="pick-friend__button button-main">Feed a friend now</button>
             </div>
         </section>
-        <section class="testimonials">
+        <section id = "g" class="testimonials">
             <div class="testimonials__background"></div>
             <div class="testimonials__container container">
                 <h3>Testimonials</h3>
