feat: add webpack to the project

--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="./main.css">
   <title>Document</title>
 </head>
 <body class="main-page">
@@ -15,7 +15,7 @@
     <nav class="header__nav nav">
       <ul class="nav__list">
         <li class="nav__item">
-          <a class="nav__link nav__link_active" href="main.html">
+          <a class="nav__link nav__link_active" href="index.html">
             About
           </a>
         </li>
@@ -28,7 +28,7 @@
     </nav>
   </header>
   <div class="video-background">
-    <video muted poster="./img/bird.png" autoplay loop>
+    <video muted poster="./dist/img/bird.png" autoplay loop>
       <source src="./video/birds10.webm" type="video/webm">
       <source src="./video/birds10.mp4" type="video/mp4">
     </video>
@@ -48,6 +48,5 @@
       Vladislava shkrabova
     </div>
   </footer>
-  <script src="slider.js"></script>
 </body>
 </html>
