--- a/songbird/src/quiz.html
+++ b/songbird/src/quiz.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="quiz.css">
+  <link rel="stylesheet" href="./main.css">
   <title>Document</title>
 </head>
 <body class="quiz-page">
   <div class="quiz">
     <div class="top-panel">
       <div class="top-panel__row">
-        <div class="logo"><a href="main.html">SONG BIRD</a></div>
+        <div class="logo"><a href="index.html">SONG BIRD</a></div>
         <div class="score">Score: 0</div>
       </div>
       <ul class="questions-list">
@@ -58,6 +58,6 @@
     <div class="end-message block">
     </div>
   </div>
-  <script type="module" src="quize.js"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
