--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./main.css">
-  <title>Document</title>
+  <title>Songbird</title>
 </head>
 <body class="main-page">
   <header class="header">
@@ -16,12 +16,12 @@
       <ul class="nav__list">
         <li class="nav__item">
           <a class="nav__link nav__link_active" href="index.html">
-            About
+            Главная
           </a>
         </li>
         <li class="nav__item">
           <a class="nav__link" href="quiz.html">
-            Start the quiz
+            Викторина
           </a>
         </li>
       </ul>
@@ -45,7 +45,7 @@
       <a href="https://rs.school/js/"><img class="school-logo__img" src="./svg/rs_school_js.svg"></a>
     </div>
     <div class="author">
-      Vladislava shkrabova
+      Vladislava Shkrabova
     </div>
   </footer>
 </body>
