--- a/songbird/src/quiz.html
+++ b/songbird/src/quiz.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./main.css">
-  <title>Document</title>
+  <title>Songbird</title>
 </head>
 <body class="quiz-page">
   <div class="quiz">
@@ -53,7 +53,7 @@
       Послушайте плеер. Выберите птицу из списка.
     </div>
     <button class="next-level" disabled>
-      Next level
+      Следующий уровень
     </button>
     <div class="end-message block">
     </div>
