--- a/songbird/src/index.html
+++ b/songbird/src/index.html
@@ -24,6 +24,11 @@
             Викторина
           </a>
         </li>
+        <li class="nav__item">
+          <a class="nav__link" href="gallery.html">
+            Галерея
+          </a>
+        </li>
       </ul>
     </nav>
   </header>
