--- a/songbird/src/quiz.html
+++ b/songbird/src/quiz.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./main.css">
-  <title>Songbird</title>
+  <title>Quiz</title>
 </head>
 <body class="quiz-page">
   <div class="quiz">
@@ -58,6 +58,6 @@
     <div class="end-message block">
     </div>
   </div>
-  <script src="./main.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
