--- a/songbird/src/gallery.html
+++ b/songbird/src/gallery.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./main.css">
+  <link type="Image/x-icon" href="./img/icon-bird.png" rel="icon">
   <title>Gallery</title>
 </head>
 <body class="gallery-page">
